# cablerobot_ws

./: .gitignore
src/cablerobot_interfaces/: CMakeLists.txt  package.xml
src/cablerobot_interfaces/msg/: ManualCommand.msg  MotorPositionCommand.msg
src/cablerobot_pkg/: package.xml  setup.cfg  setup.py
src/cablerobot_pkg/cablerobot_pkg/: cablerobot_control_node.py  odrive_typing.py  path_publisher_node.py  teleop_node.py
src/cablerobot_pkg/cablerobot_pkg/data/: center_box.csv  center_circle.csv  circle_new_cage.csv  highertensioncenter_circle.csv  highertensionstill_center_circle.csv  motor_angles.csv  test.py
src/cablerobot_pkg/cablerobot_pkg/utility/: calculateMotorPositions.py  calibrateOdriveMotor.py  getOdriveSerialNumber.py  getStaticTorques.py  manualInputs.py  motorInputTesting.py  testingInputTypes.py
